--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,7 @@
 # set scroll history to 100,000 lines
 set-option -g history-limit 100000
 
+# rebind prefix key
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
@@ -34,6 +35,10 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# split windows in vim way
+bind-key v split-window -h
+bind-key s split-window -v
+
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
 
@@ -53,6 +58,9 @@ setw -g mode-style 'fg=colour1 bg=colour18 bold'
 # panes
 set -g pane-active-border-style 'bg=colour0 fg=colour9'
 
+# remove gaps between window list
+set-window-option -g window-status-separator ''
+
 # statusbar
 set -g status-position bottom
 set -g status-justify left
@@ -61,10 +69,8 @@ set -g status-left ''
 set -g status-right '#[fg=colour233,bg=colour40] %d/%m #[fg=colour233,bg=colour8] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
-
 setw -g window-status-current-style 'fg=colour233 bg=colour118 bold'
 setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour233]#W#[fg=colour233]#F '
-
-setw -g window-status-style 'fg=colour233 bg=colour110'
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+setw -g window-status-style 'fg=colour233 bg=colour110 bold'
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour233]#W#[fg=colour233]#F '
 setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
