--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -36,8 +36,9 @@ bind k select-pane -U
 bind l select-pane -R
 
 # split windows in vim way
-bind-key v split-window -h
-bind-key s split-window -v
+bind-key v split-window -h -c '#{pane_current_path}'
+bind-key s split-window -v -c '#{pane_current_path}'
+bind c new-window -c '#{pane_current_path}'
 
 
 ### DESIGN CHANGES ###
@@ -60,7 +61,7 @@ set -g status-position bottom
 set -g status-justify left
 set -g status-style 'bg=colour233 fg=colour45 dim'
 set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour40] %d/%m #[fg=colour233,bg=colour8] %H:%M:%S '
+set -g status-right '#[fg=colour233,bg=colour40] %m/%d #[fg=colour233,bg=colour8] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
 setw -g window-status-current-style 'fg=colour233 bg=colour118 bold'
