--- a/docker/config.json
+++ b/docker/config.json
@@ -3,9 +3,7 @@
  {
    "default":
    {
-     "socksProxy": "socks5://127.0.0.1:1080",
-     "httpProxy": "http://127.0.0.1:1089",
-     "httpsProxy": "https://127.0.0.1:1089"
+     "socksProxy": "socks5://127.0.0.1:1080"
    }
  }
 }
