tmux: fix strange characters in WSL2
Signed-off-by: Jun Zhang <jun@junz.org>

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -20,7 +20,9 @@ bind -T copy-mode-vi Enter send-keys -X cancel
 bind-key -nr C-y run "tmux show-buffer | xclip -in -selection clipboard &> /dev/null"
 
 # Avoid ESC delay
-set -s escape-time 0
+# set it to zero will cause issue in WSL2
+# Ref: https://github.com/microsoft/WSL/issues/5931
+set -s escape-time 50
 
 # Fix titlebar
 set -g set-titles on
