--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -63,9 +63,8 @@ set -g status-position bottom
 set -g status-justify left
 set -g status-style 'bg=colour233 fg=colour45 dim'
 set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour40] %m/%d #[fg=colour233,bg=colour8] %H:%M:%S '
-set -g status-right-length 50
-set -g status-left-length 20
+set -g status-right ''
+set -g status-right-length 0
 setw -g window-status-current-style 'fg=colour233 bg=colour118 bold'
 setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour233]#W#[fg=colour233]#F '
 setw -g window-status-style 'fg=colour233 bg=colour110 bold'
