--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,10 +1,10 @@
 # set scroll history to 100,000 lines
 set-option -g history-limit 100000
 
-# rebind prefix key
 unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+set -g prefix `
+bind-key ` last-window
+bind-key e send-prefix
 
 # modern colors
 set -g default-terminal "tmux-256color"
@@ -33,31 +33,18 @@ bind-key v split-window -h -c '#{pane_current_path}'
 bind-key s split-window -v -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
 
-
-### DESIGN CHANGES ###
-######################
-
 set -g visual-activity off
 set -g visual-bell off
 set -g visual-silence off
 setw -g monitor-activity off
 set -g bell-action none
 
-# panes
-set -g pane-active-border-style 'bg=colour0 fg=colour9'
-
-# remove gaps between window list
-set-window-option -g window-status-separator ''
-
-# statusbar
 set -g status-position bottom
-set -g status-justify left
-set -g status-style 'bg=colour233 fg=colour45 dim'
+set -g status-bg colour234
+set -g status-fg colour137
 set -g status-left ''
 set -g status-right ''
-set -g status-right-length 0
-setw -g window-status-current-style 'fg=colour233 bg=colour118 bold'
-setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour233]#W#[fg=colour233]#F '
-setw -g window-status-style 'fg=colour233 bg=colour110 bold'
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour233]#W#[fg=colour233]#F '
-setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
+set -g status-left-length 20
+
+setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
