--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,8 +2,9 @@
 set-option -g history-limit 100000
 
 unbind C-b
-set -g prefix `
-bind-key ` last-window
+set -g prefix C-x
+bind C-x send-prefix
+bind-key Tab last-window
 bind-key e send-prefix
 
 # modern colors
@@ -27,6 +28,10 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# Use vi-style copy mode
+setw -g mode-keys vi
+bind -T copy-mode-vi y send -X copy-selection-and-cancel
 
 # split windows in vim way
 bind-key v split-window -h -c '#{pane_current_path}'
